DASH playback support

--- a/LightTube/Views/Shared/_Layout.cshtml
+++ b/LightTube/Views/Shared/_Layout.cshtml
@@ -69,7 +69,7 @@
 			<img src="/icons/profile.svg">
 		</a>
 		<div class="account-menu">
-			<div class="guide-item"><a href="/toggle_theme?redirectUrl=@(HttpUtility.UrlEncode($"{Context.Request.Path}{Context.Request.QueryString}"))">Toggle Theme</a></div>
+			<div class="guide-item"><a href="/toggles/compatibility?redirectUrl=@(HttpUtility.UrlEncode($"{Context.Request.Path}{Context.Request.QueryString}"))">Compatibility Mode</a></div>
 			@Html.Partial("_LoginLogoutPartial")
 			<div class="guide-item"><a href="/toggles/theme?redirectUrl=@(HttpUtility.UrlEncode($"{Context.Request.Path}{Context.Request.QueryString}"))">Toggle Theme</a></div>
 		</div>
