--- a/LightTube/wwwroot/css/mobile.css
+++ b/LightTube/wwwroot/css/mobile.css
@@ -161,6 +161,10 @@ a.icon-link, a.icon-link > img {
     display: none;
 }
 
+.show-on-minmode {
+    display: none;
+}
+
 /* top bar */
 
 .logo {
