--- a/LightTube/wwwroot/css/mobile.css
+++ b/LightTube/wwwroot/css/mobile.css
@@ -56,7 +56,7 @@ h1, h2, h3, h4, h5, h6 {
 
     box-shadow: #0004 0 2px 5px;
     background-color: var(--top-bar-background);
-    
+
     z-index: 1;
 }
 
@@ -168,7 +168,7 @@ a.icon-link, a.icon-link > img {
 /* top bar */
 
 .logo {
-    color: var(--text-primary);
+    color: var(--text-primary) !important;
     text-decoration: none;
     font-size: larger;
 }
@@ -921,4 +921,36 @@ a.icon-link, a.icon-link > img {
 
 .playlist-info > .channel-info {
     display: none;
+}
+
+/* horizontal channel list */
+
+.horizontal-channel-list {
+    display: flex;
+    column-gap: 16px;
+    padding: 16px;
+    overflow-x: scroll;
+    background-color: var(--item-hover-background);
+}
+
+.horizontal-channel-list > .channel {
+    text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    row-gap: 4px;
+    color: var(--text-secondary);
+}
+
+.horizontal-channel-list > .channel > div {
+    font-size: small;
+    text-align: center;
+    width: 48px;
+    color: var(--text-secondary);
+}
+
+.horizontal-channel-list > .channel > img {
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+    background-color: var(--thumbnail-background);
 }
