--- a/LightTube/Views/Shared/_LoginLogoutPartial.cshtml
+++ b/LightTube/Views/Shared/_LoginLogoutPartial.cshtml
@@ -1,19 +1,12 @@
-@if (Context.Request.Cookies.TryGetValue("token", out string token))
+@if (Context.TryGetUser(out LTUser user))
 {
-	@try
+	<div class="guide-item"><a>@user.Email.Split("@")[0]</a></div>
+	<!--div class="guide-item"><a href="/Account/ContentSettings">Settings</a></div-->
+	@if (user.PasswordHash != "local_account")
 	{
-		LTUser user = await DatabaseManager.GetUserFromToken(token);
-
-		<div class="guide-item"><a>@user.Email.Split("@")[0]</a></div>
-		<!--div class="guide-item"><a href="/Account/ContentSettings">Settings</a></div-->
 		<div class="guide-item"><a href="/Account/Logins">Active logins</a></div>
-        <div class="guide-item"><a href="/Account/Logout">Log out</a></div>
 	}
-	catch
-	{
-		<div class="guide-item"><a href="/Account/Login">Log in</a></div>
-		<div class="guide-item"><a href="/Account/Register">Register</a></div>
-	}
+    <div class="guide-item"><a href="/Account/Logout">Log out</a></div>
 }
 else
 {
