--- a/LightTube/Views/Account/Delete.cshtml
+++ b/LightTube/Views/Account/Delete.cshtml
@@ -2,16 +2,45 @@
 @{
 	ViewData["Title"] = "Delete Account";
 	Layout = "_Layout";
+	ViewData["DisableOldCss"] = true;
 }
 
 @if (!string.IsNullOrWhiteSpace(Model.Message))
 {
-	<h1>@Model.Message</h1>
+	<div class="login-message">
+		@Model.Message
+	</div>
 }
 
-<form asp-action="Delete" method="POST" class="login-form">
-	<h1>Delete Account</h1>
-	<input name="email" type="email" placeholder="Email">
-	<input name="password" type="password" placeholder="Password">
-	<input type="submit" value="Delete Account">
-</form>
+<div class="login-container">
+	<div>
+		<div>
+			@if (Context.Request.Cookies.TryGetValue("account_data", out string _))
+			{
+				Context.TryGetUser(out LTUser user);
+				<form asp-action="Delete" method="POST" class="login-form">
+					<h1>Delete Account</h1>
+					<p>Deleting a local account</p>
+					<input name="email" type="hidden" value="@user.Email">
+					<input name="password" type="hidden" value="@user.PasswordHash">
+					<input type="submit" value="Delete Account" class="login-button danger">
+				</form>
+			}
+			else
+			{
+				<form asp-action="Delete" method="POST" class="login-form">
+					<h1>Delete Account</h1>
+					<input name="email" type="email" placeholder="Email">
+					<input name="password" type="password" placeholder="Password">
+					<input type="submit" value="Delete Account" class="login-button danger">
+				</form>
+			}
+		</div>
+	</div>
+	<div>
+		<div>
+			<h1>Warning!</h1>
+			<p>You cannot undo this operation! After you enter your username and password, your account will get deleted forever.</p>
+		</div>
+	</div>
+</div>
