--- a/LightTube/Views/Account/Login.cshtml
+++ b/LightTube/Views/Account/Login.cshtml
@@ -2,16 +2,29 @@
 @{
 	ViewData["Title"] = "Login";
 	Layout = "_Layout";
+	ViewData["DisableOldCss"] = true;
 }
 
 @if (!string.IsNullOrWhiteSpace(Model.Message))
 {
-	<h1>@Model.Message</h1>
+	<div class="login-message">
+		@Model.Message
+	</div>
 }
 
-<form asp-action="Login" method="POST" class="login-form">
-	<h1>Login</h1>
-	<input name="email" type="email" placeholder="Email">
-	<input name="password" type="password" placeholder="Password">
-	<input type="submit" value="Login">
-</form>
+<div class="login-container">
+	<div>
+		<div>
+			<form asp-action="Login" method="POST" class="login-form">
+            	<h1>Log in</h1>
+            	<input name="email" type="email" placeholder="Email">
+            	<input name="password" type="password" placeholder="Password">
+            	<input type="submit" value="Login">
+            </form>
+		</div>
+	</div>	
+	<div>
+		<h2>Don't have an account?</h2>
+		<a href="/Account/Register" class="login-button">Create an account</a>
+	</div>
+</div>
