--- a/LightTube/Views/Account/Register.cshtml
+++ b/LightTube/Views/Account/Register.cshtml
@@ -2,16 +2,42 @@
 @{
 	ViewData["Title"] = "Register";
 	Layout = "_Layout";
+	ViewData["DisableOldCss"] = true;
 }
 
 @if (!string.IsNullOrWhiteSpace(Model.Message))
 {
-	<h1>@Model.Message</h1>
+	<div class="login-message">
+		@Model.Message
+	</div>
 }
 
-<form asp-action="Register" method="POST" class="login-form">
-	<h1>Register</h1>
-	<input name="email" type="email" placeholder="Email">
-	<input name="password" type="password" placeholder="Password">
-	<input type="submit" value="Register">
-</form>
+<div class="login-container">
+	<div>
+		<div>
+			<form asp-action="Register" method="POST" class="login-form">
+            	<h1>Register</h1>
+            	<input name="email" type="email" placeholder="Email">
+            	<input name="password" type="password" placeholder="Password">
+            	<input type="submit" value="Register">
+            </form>
+		</div>
+	</div>
+	<div>
+		<div>
+			<h1>...or register with a local account</h1>
+			<h2>What is the difference?</h2>
+			<ul>
+				<li>Remote account data is saved in this lighttube instance, while local account data is stored in
+					your browser's cookies
+					<ul>
+						<li>This means that the author of this lighttube instance cannot see your account data</li>
+						<li>It also means that, if you clear your cookies a lot, your account data will also get
+							lost with the cookies</li>
+					</ul>
+				</li>
+			</ul>
+			<a href="/Account/RegisterLocal" class="login-button">Create local account</a>
+		</div>
+	</div>
+</div>
