Change one line of text

--- a/LightTube/Views/Shared/_Layout.cshtml
+++ b/LightTube/Views/Shared/_Layout.cshtml
@@ -119,7 +119,7 @@
 	<div class="show-on-minmode guide-item">
 		<a href="/toggles/collapse_guide?redirectUrl=@(HttpUtility.UrlEncode($"{Context.Request.Path}{Context.Request.QueryString}"))">
 			<i class="icon"><img src="/icons/uncollapse_guide.svg"></i>
-			Uncollapse
+			Expand
 		</a>
 	</div>
 	<hr class="hide-on-minmode">
