--- a/LightTube/wwwroot/css/mobile.css
+++ b/LightTube/wwwroot/css/mobile.css
@@ -954,3 +954,98 @@ a.icon-link, a.icon-link > img {
     border-radius: 50%;
     background-color: var(--thumbnail-background);
 }
+
+/* Login / Register / Delete pages */
+
+.login-container {
+    display: flex;
+    flex-direction: row;
+    padding: 24px;
+}
+
+@media screen and (max-width: 1300px) {
+    .login-container {
+        flex-direction: column;
+    }
+}
+
+.login-container > * {
+    flex: 1 1 0;
+}
+
+.login-container > * > div {
+    max-width: 600px;
+    margin: auto;
+}
+
+.login-form {
+    display: flex;
+    flex-direction: column;
+    max-width: 400px;
+    row-gap: 10px;
+    margin: auto;
+}
+
+.login-form > input, .login-button {
+    background-color: var(--item-active-background);
+    color: var(--text-primary);
+    border: 1px solid var(--border-color);
+    padding: 10px;
+    max-width: 400px;
+    row-gap: 10px;
+    margin: auto;
+}
+
+.login-button {
+    background-color: var(--item-active-background);
+    color: var(--text-primary);
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    width: fit-content;
+}
+
+.login-button.danger {
+    color: red;
+    font-weight: bold;
+}
+
+.login-form > h1 {
+    text-align: center;
+}
+
+.login-message {
+    width: calc(100% - 96px);
+    margin: 48px;
+    padding: 16px;
+    border: 1px solid var(--border-color);
+    background-color: var(--item-active-background);
+    border-radius: 5px;
+}
+
+
+/* Account Menu */
+
+.fullscreen-account-menu > .guide-item:hover {
+    background-color: var(--item-hover-background);
+}
+
+.fullscreen-account-menu > .guide-item > a {
+    height: 40px;
+    display: flex;
+    align-items: start;
+    color: var(--text-primary);
+    text-decoration: none;
+    font-size: initial;
+    padding: 0;
+}
+
+.fullscreen-account-menu > .guide-item > a > .icon {
+    height: 24px;
+    width: 24px;
+    margin-right: 24px;
+}
+
+.fullscreen-account-menu > .guide-item.active {
+    background-color: var(--item-active-background);
+}
